fix white space bug in multicol dt

--- a/src/styles/core/lists/lists.css
+++ b/src/styles/core/lists/lists.css
@@ -41,7 +41,7 @@ dl.colspan4 { width: 650px; }
     *overflow: visible;
     *zoom: 1;
     float: none;
-    margin: 0 0 0 135px;
+    margin: 0 0 0 140px;
     line-height: 1.5em;
     word-wrap: break-word;
 }
